--- a/beve_labelview/src/main/res/values/attrs.xml
+++ b/beve_labelview/src/main/res/values/attrs.xml
@@ -3,11 +3,11 @@
     <!--斜角标签-->
     <declare-styleable name="BeveLabelView">
         <!--背景颜色-->
-        <attr name="label_bg_color" format="color"/>
+        <attr name="label_bg_color" format="color|reference"/>
         <!--文字-->
         <attr name="label_text" format="string"/>
         <!-- 文字颜色-->
-        <attr name="label_text_color" format="color"/>
+        <attr name="label_text_color" format="color|reference"/>
         <!--文字大小-->
         <attr name="label_text_size" format="dimension"/>
 
